2009-10-22 Kaz Kylheku  <kkylheku@gmail.com>

	Got build to work in separate build directory.

	* Makefile (CFLAGS): Added -I flag to point header inclusion to the
	source directory.
	(PROG): New variable to hold program name.
	(VPATH): Variable set, as a quick and dirty way to get GNU make
	to find the prerequisites back in the source directory.
	* configure: Added steps to symlink the tests directory and dep.mk.
	* depend.txr: Modified to generate the dependencies with
	correct references to the top_srcdir, with the exception of
	locally generated headers.
	* dep.mk: Regenerated.

2009-10-22 Kaz Kylheku  <kkylheku@gmail.com>

	Build configuration via configure script, with cross compiling support.
	(Tested by cross-compiling txr on an x86 GNU/Linux system
	to run on a MIPS-based GNU/Linux system).

	* configure: New script.
	* Makefile: (OPT_FLAGS, LANG_FLAGS, DIAG_FLAGS, DBG_FLAGS,
	LEX_DBG_FLAGS, TXR_DBG_OPTS, LEXLIB): Variables removed;
	these are now generated in config.make by configure.
	(config.make): New target to print friendlier diagnostic if
	the build is not configured.
	(distclean): New target to do clean, plus remove config.make.

2009-10-22 Kaz Kylheku  <kkylheku@gmail.com>

	* parser.l (YY_INPUT): Kill tabs with spaces (how did they sneak in?).
	Fix possible use of uninitialized ch.

2009-10-21 Kaz Kylheku  <kkylheku@gmail.com>

	* txr.1: Fixed misleading wording (separation versus termination).
	Added Introduction headings to some major sections.
	Improved exception handling intro.

2009-10-21 Kaz Kylheku  <kkylheku@gmail.com>

	Version 019

	Regexps can be bound to variables.

	New freeform directive.

	* txr.c (version): Bump.
	* txr.1: Bump version and date.

	* lib.c, match.c, regex.c, regex.h, stream.c: Trailing whitespace
	removed from lines.

2009-10-21 Kaz Kylheku  <kkylheku@gmail.com>

	* txr.1: Documented freeform.

2009-10-21 Kaz Kylheku  <kkylheku@gmail.com>

	Change the freeform line catenation semantics to termination